--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">34</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">36</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -295,14 +295,16 @@ ga('require', 'pageVisibilityTracker');
             <li>Hariyani, S., & Brgoch, J. (2020). Local Structure Distortion Induced Broad Band Emission in the All-Inorganic BaScO<sub>2</sub>F:Eu<sup>2+</sup> Perovskite. Chemistry of Materials, 32(15), 6640–6649. <a href="https://doi.org/10.1021/acs.chemmater.0c02062"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>ISHADO, Y., INOISHI, A., & OKADA, S. (2020). Exploring Factors Limiting Three-Na+ Extraction from Na<sub>3</sub>V<sub>2</sub>(PO<sub>4</sub>)<sub>3</sub>. Electrochemistry, 88(5), 457–462. <a href="https://doi.org/10.5796/electrochemistry.20-00080"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Wang, Y., Csanádi, T., Zhang, H., Dusza, J., Reece, M. J., & Zhang, R. (2020). Enhanced Hardness in High‐Entropy Carbides through Atomic Randomness. Advanced Theory and Simulations, 2000111, 2000111. <a href="https://doi.org/10.1002/adts.202000111"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Jiang, M., Mukherjee, S., Chen, Z. W., Chen, L., Li, M., Xiao, H., … Singh, C. V. (2020). Materials perspective on new lithium chlorides and bromides: insights from thermo-physical properties. Physical Chemistry Chemical Physics, 19. <a href="https://doi.org/10.1039/D0CP02946G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Gierlotka, W., Dębski, A., Terlicka, S., Gąsior, W., Pęska, M., & Polański, M. (2020). Insight into Phase Stability in the Mg-Pd System: The Ab Initio Calculations. Journal of Phase Equilibria and Diffusion. <a href="https://doi.org/10.1007/s11669-020-00836-y"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Jiang, M., Mukherjee, S., Chen, Z. W., Chen, L., Li, M., Xiao, H., … Singh, C. V. (2020). Materials perspective on new lithium chlorides and bromides: insights from thermo-physical properties. Physical Chemistry Chemical Physics, 22(39), 22758–22767. <a href="https://doi.org/10.1039/D0CP02946G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Gierlotka, W., Dębski, A., Terlicka, S., Gąsior, W., Pęska, M., & Polański, M. (2020). Insight into Phase Stability in the Mg-Pd System: The Ab Initio Calculations. Journal of Phase Equilibria and Diffusion, 41(5), 681–686. <a href="https://doi.org/10.1007/s11669-020-00836-y"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Smith, D. A., Rai, A., Lim, Y., Hartnett, T. Q., Sapkota, A., Srivastava, A., … Emori, S. (2020). Magnetic Damping in Epitaxial Iron Alloyed with Vanadium and Aluminum. Physical Review Applied, 14(3), 034042. <a href="https://doi.org/10.1103/PhysRevApplied.14.034042"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Son, S., Li, W., Lee, J.-Y., & Kwon, K. D. (2020). On the coordination of Mg2+ in aragonite: Ab-initio absorption spectroscopy and isotope fractionation study. Geochimica et Cosmochimica Acta, 286, 324–335. <a href="https://doi.org/10.1016/j.gca.2020.07.023"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Li, H., Li, Y., Zhao, X., Wang, Y., Huang, K., Qiu, W., … Liu, J. (2020). Vacancy-induced anion and cation redox chemistry in cation-deficient F-doped anatase TiO<sub>2</sub>. Journal of Materials Chemistry A, 8(39), 20393–20401. <a href="https://doi.org/10.1039/D0TA07578G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Sadowski, M., & Albe, K. (2020). Computational study of crystalline and glassy lithium thiophosphates: Structure, thermodynamic stability and transport properties. Journal of Power Sources, 478(October), 229041. <a href="https://doi.org/10.1016/j.jpowsour.2020.229041"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Bianchini, M., Schiele, A., Schweidler, S., Sicolo, S., Fauth, F., Suard, E., … Janek, J. (2020). From LiNiO<sub>2</sub> to Li<sub>2</sub>NiO<sub>3</sub> : Synthesis, Structures and Electrochemical Mechanisms in Li-Rich Nickel Oxides. Chemistry of Materials, 3, acs.chemmater.0c02880. <a href="https://doi.org/10.1021/acs.chemmater.0c02880"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Hadouchi, M., Yaqoob, N., Kaghazchi, P., Tang, M., Liu, J., Sang, P., … Ma, J. (2020). Fast Sodium Intercalation in Na<sub>3.41</sub>⬜<sub>0.59</sub>FeV(PO<sub>4</sub>)<sub>3</sub>: A Novel Sodium-Deficient NASICON Cathode for Sodium-Ion Batteries. Energy Storage Materials. <a href="https://doi.org/10.1016/j.ensm.2020.11.010"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
+            <li>Bianchini, M., Schiele, A., Schweidler, S., Sicolo, S., Fauth, F., Suard, E., … Janek, J. (2020). From LiNiO<sub>2</sub> to Li<sub>2</sub>NiO<sub>3</sub> : Synthesis, Structures and Electrochemical Mechanisms in Li-Rich Nickel Oxides. Chemistry of Materials, 32(21), 9211–9227. <a href="https://doi.org/10.1021/acs.chemmater.0c02880"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Park, W. B., Nathan, M. G. T., Han, S. C., Lee, J.-W., Sohn, K.-S., & Pyo, M. (2020). Aliovalent-doped sodium chromium oxide (Na<sub>0.9</sub>Cr<sub>0.9</sub>Sn<sub>0.1</sub>O<sub>2</sub> and Na<sub>0.8</sub>Cr<sub>0.9</sub>Sb<sub>0.1</sub>O<sub>2</sub>) for sodium-ion battery cathodes with high-voltage characteristics. RSC Advances, 10(71), 43273–43281. <a href="https://doi.org/10.1039/D0RA08332A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Ota, Y. (2020). Band alignment of <i>&#x3b2;</i>-(Al<sub>x</sub>Ga<sub>1&#x2212;x</sub>)<sub>2</sub>O<sub>3</sub> alloys via atomic solid-state energy scale approach. AIP Advances, 10(12), 125321. <a href="https://doi.org/10.1063/5.0031224"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Cooley, K. A., Keilbart, N., Champlain, J. G., Ruppalt, L. B., Walter, T. N., Dabo, I., & Mohney, S. E. (2020). First-principles study and experimental characterization of metal incorporation in germanium telluride. Journal of Applied Physics, 128(22), 225306. <a href="https://doi.org/10.1063/5.0029205"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
           </ul>
         </div>
       </div>
@@ -310,12 +312,13 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2021">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2021<span class="badge badge-success pull-right">2</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2021<span class="badge badge-success pull-right">3</span></h4>
         </a>
       </div>
       <div id="collapse2021" class="panel-collapse collapse">
         <div class="panel-body">
           <ul class="list-papers">
+            <li>Hadouchi, M., Yaqoob, N., Kaghazchi, P., Tang, M., Liu, J., Sang, P., … Ma, J. (2021). Fast sodium intercalation in Na<sub>3.41</sub>£<sub>0.59</sub>FeV(PO<sub>4</sub>)<sub>3</sub>: A novel sodium-deficient NASICON cathode for sodium-ion batteries. Energy Storage Materials, 35, 192–202. <a href="https://doi.org/10.1016/j.ensm.2020.11.010"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>          
             <li>Wang, T., Mei, J., Liu, J., & Liao, T. (2021). Maximizing ionic transport of Li<sub>1+x</sub>Al<sub>x</sub>Ti<sub>2-x</sub>P<sub>3</sub>O<sub>12</sub> electrolytes for all-solid-state lithium-ion storage: A theoretical study. Journal of Materials Science & Technology, 73, 45–51. <a href="https://doi.org/10.1016/j.jmst.2020.09.027"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Romaka, V. V., Romaka, L., Horyn, A., & Stadnyk, Y. (2021). Experimental and theoretical investigation of the Y–Ni–Sb and Tm–Ni–Sb systems. Journal of Alloys and Compounds, 855, 157334. <a href="https://doi.org/10.1016/j.jallcom.2020.157334"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
