--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">36</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">37</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -304,7 +304,8 @@ ga('require', 'pageVisibilityTracker');
             <li>Bianchini, M., Schiele, A., Schweidler, S., Sicolo, S., Fauth, F., Suard, E., … Janek, J. (2020). From LiNiO<sub>2</sub> to Li<sub>2</sub>NiO<sub>3</sub> : Synthesis, Structures and Electrochemical Mechanisms in Li-Rich Nickel Oxides. Chemistry of Materials, 32(21), 9211–9227. <a href="https://doi.org/10.1021/acs.chemmater.0c02880"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Park, W. B., Nathan, M. G. T., Han, S. C., Lee, J.-W., Sohn, K.-S., & Pyo, M. (2020). Aliovalent-doped sodium chromium oxide (Na<sub>0.9</sub>Cr<sub>0.9</sub>Sn<sub>0.1</sub>O<sub>2</sub> and Na<sub>0.8</sub>Cr<sub>0.9</sub>Sb<sub>0.1</sub>O<sub>2</sub>) for sodium-ion battery cathodes with high-voltage characteristics. RSC Advances, 10(71), 43273–43281. <a href="https://doi.org/10.1039/D0RA08332A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Ota, Y. (2020). Band alignment of <i>&#x3b2;</i>-(Al<sub>x</sub>Ga<sub>1&#x2212;x</sub>)<sub>2</sub>O<sub>3</sub> alloys via atomic solid-state energy scale approach. AIP Advances, 10(12), 125321. <a href="https://doi.org/10.1063/5.0031224"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Cooley, K. A., Keilbart, N., Champlain, J. G., Ruppalt, L. B., Walter, T. N., Dabo, I., & Mohney, S. E. (2020). First-principles study and experimental characterization of metal incorporation in germanium telluride. Journal of Applied Physics, 128(22), 225306. <a href="https://doi.org/10.1063/5.0029205"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
+            <li>Cooley, K. A., Keilbart, N., Champlain, J. G., Ruppalt, L. B., Walter, T. N., Dabo, I., & Mohney, S. E. (2020). First-principles study and experimental characterization of metal incorporation in germanium telluride. Journal of Applied Physics, 128(22), 225306. <a href="https://doi.org/10.1063/5.0029205"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Gautam, A., Sadowski, M., Ghidiu, M., Minafra, N., Senyshyn, A., Albe, K., & Zeier, W. G. (2020). Engineering the Site‐Disorder and Lithium Distribution in the Lithium Superionic Argyrodite Li<sub>6</sub>PS<sub>5</sub>Br. Advanced Energy Materials, 2003369, 2003369. <a href="https://doi.org/10.1002/aenm.202003369"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li> 
           </ul>
         </div>
       </div>
