--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2021">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2021<span class="badge badge-success pull-right">3</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2021<span class="badge badge-success pull-right">6</span></h4>
         </a>
       </div>
       <div id="collapse2021" class="panel-collapse collapse">
@@ -322,6 +322,9 @@ ga('require', 'pageVisibilityTracker');
             <li>Hadouchi, M., Yaqoob, N., Kaghazchi, P., Tang, M., Liu, J., Sang, P., … Ma, J. (2021). Fast sodium intercalation in Na<sub>3.41</sub>£<sub>0.59</sub>FeV(PO<sub>4</sub>)<sub>3</sub>: A novel sodium-deficient NASICON cathode for sodium-ion batteries. Energy Storage Materials, 35, 192–202. <a href="https://doi.org/10.1016/j.ensm.2020.11.010"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>          
             <li>Wang, T., Mei, J., Liu, J., & Liao, T. (2021). Maximizing ionic transport of Li<sub>1+x</sub>Al<sub>x</sub>Ti<sub>2-x</sub>P<sub>3</sub>O<sub>12</sub> electrolytes for all-solid-state lithium-ion storage: A theoretical study. Journal of Materials Science & Technology, 73, 45–51. <a href="https://doi.org/10.1016/j.jmst.2020.09.027"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Romaka, V. V., Romaka, L., Horyn, A., & Stadnyk, Y. (2021). Experimental and theoretical investigation of the Y–Ni–Sb and Tm–Ni–Sb systems. Journal of Alloys and Compounds, 855, 157334. <a href="https://doi.org/10.1016/j.jallcom.2020.157334"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Gierlotka, W., Dębski, A., Terlicka, S., Gąsior, W., Pęska, M., Polański, M., & Lin, I.-T. (2021). Insight into Phase Stability in the Mg-Pt System. The Ab Initio Calculations. Journal of Phase Equilibria and Diffusion. <a href="https://doi.org/10.1007/s11669-020-00857-7"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Liu, S., Li, Y., Liu, J., Yang, Z., Liu, J., & Shi, Y. (2021). Equilibrium Cu isotope fractionation in copper minerals: a first-principles study. Chemical Geology, 564, 120060. <a href="https://doi.org/10.1016/j.chemgeo.2021.120060"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Tsuchimoto, A., Shi, X., Kawai, K., Boisse, B. M. De, Kikkawa, J., Asakura, D., … Yamada, A. (n.d.). Nonpolarizing oxygen-redox capacity without O-O dimerization in Na<sub>2</sub>Mn<sub>3</sub>O<sub>7</sub>. Nature Communications, (2021), 1–7. <a href="https://doi.org/10.1038/s41467-020-20643-w"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
