--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ ga('require', 'pageVisibilityTracker');
       <h4><b>20-05-2021</b></h4>
     </div>
     <div class="text-left col-xs-8 col-sm-9 col-md-10 col-xl-11">
-      <h4> <b>Supercell v2.0</b> </h4>
+      <h4 style="color:red"> <b>Supercell v2.0</b> </h4>
       <p>A new version of supercell program with major improvements: performance, portability and new parameters.
       Please check <a data-toggle="modal" data-target="#whats-new-2-0">changelog</a> and <a data-toggle="modal" data-target="#bench-v2-0" >benchmark.</a>
       </p>
