--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="col-lg-12">
       <div class="jumbotron">
         <h1 class="text-center">Supercell program</h1>
+        <h2 class="text-center">version 2.0</h2>
         <p class="text-center">a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals.</p>
         <div class="row">
           <div class="col-lg-3 col-lg-offset-3 col-md-offset-2 сol-md-3 col-sm-offset-1 col-sm-4 col-xs-offset-1 col-xs-5">
@@ -445,12 +446,12 @@ ga('require', 'pageVisibilityTracker');
   <hr>
   <div class="row">
     <div class="text-center col-sm-6">
-      <h3><i class="fa fa-file-zip-o" aria-hidden="true"></i>  Compiled binaries</h3>
-      <p>The easiest way to obtain the program is to download compiled binaries for Linux, Mac and Windows platforms. Just download the archive, unpack it and follow the instruction inside. You don't need to install the binaries, therefore you can use it without a root permission. NB! Windows version is significantly slower and do not support acrhive output.</p>
+      <h3><i class="fa fa-file-zip-o" aria-hidden="true"></i>  Compiled binaries (v2.0) </h3>
+      <p>The easiest way to obtain the program is to download compiled binaries for Linux, Mac and Windows platforms. Just download the archive, unpack it and follow the instruction inside. You don't need to install the binaries, therefore you can use it without a root permission. Supercell v1.2 is available <a href="https://github.com/orex/supercell/tree/gh-pages/v1.2">here</a>.</p>
     </div>  
     <div class="text-center col-sm-6">
       <h3><i class="fa fa-file-code-o" aria-hidden="true"></i>  Source code</h3>
-		<p>Building the program from source code is suggested for advanced users, who need output packing or want to change the program code. I can recommend to use Ubuntu 12.04 or later for compiling the code. You can also install compiled program to your system, if you have administrator rights. The program can be compiled natively on Windows platfrom also, but I've never tried this. Tutorial and manual sources are also available.</p>
+		<p>Building the program from source code is suggested for advanced users, who need output packing or want to change the program code. I can recommend to use Ubuntu 18.04 or later for compiling the code. You can also install compiled program to your system, if you have administrator rights. The program can be compiled natively on Windows platform also, but I've never tried this. Tutorial and manual sources are also available.</p>
     </div>  
   </div>
   <div class="row">
@@ -473,7 +474,7 @@ ga('require', 'pageVisibilityTracker');
     <dl class="dl-horizontal">
       <dt><a href="https://wiki.fysik.dtu.dk/ase/">ASE</a></dt><dd>Atomic Simulation Environment is another set of python tool for setting up, manipulating, running, visualizing and analyzing atomistic simulations. Support many calculation software, both classical and <i>ab-initio</i>, including CASTEP and VASP.</dd>
       <dt><a href="http://sourceforge.net/projects/cif2cell/">cif2cell</a></dt><dd>Cif2cell is a tool to generate an input structure in different formats, like CASTEP, CP2K, CRYSTAL09, Quantum Espresso, VASP and many more.</dd> 
-      <dt><a href="http://www.crystallography.net/">COD</a></dt><dd>Open-access  structural database with more than 376 300 records (April 2017).</dd> 
+      <dt><a href="http://www.crystallography.net/">COD</a></dt><dd>Open-access  structural database with more than 473 520 records (May 2021).</dd>
       <dt><a href="http://gulp.curtin.edu.au/">GULP</a></dt><dd>GULP is a force-field program for performing a variety of tasks on a range of system types. It can be useful for optimizations, energy calculation and analysis of the structure.</dd> 
       <dt><a href="http://www.ccdc.cam.ac.uk/Community/freeservices/encifer/">EnCIFer</a></dt><dd>A GUI tool for validating of <i>supercell</i> input structures. Useful for draft structures.</dd> 
       <dt><a href="http://jp-minerals.org/vesta/">VESTA</a></dt><dd>A powerful tool for visualization and editing of crystallographic structures. It supports many input/output format (including cif) and can visualize partially occupied sites.</dd> 
